@@ -31,6 +31,7 @@ Engine fixes:
 * Fixed a memory leak in Loot copy constructor.
 * Fixed 'resist_percent' property of engine/combat.txt not working when targets had 100% resistance.
 * Support attack_speed effects with a magnitude less than 100%.
+* Fixed bug where dead entities could steal HP/MP.
 
 Game updates:
 
